--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,30 @@
 @import "_global";
 
-#search-btn{
-    background-color: rgba(16, 0, 88, 0.514);
+body{
+background-color: rgb(244, 244, 252);
+}
+
+.app-name{
+    font-family: 'Bungee Outline', cursive;
+    font-size: 5vw;
+    font-weight: bold;
+    text-align: center;
+    height: 15vh;
+}
+
+
+#container-search{
+    // display: grid;
+    // grid-template-columns: 
+
+}
+
+
+.btn{
+    background-color: rgb(11, 1, 56);
     color: white;
-
-
+    width: 10vw;
+    height:100%;
+    text-align: center;
 
 }
