--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,17 +14,107 @@ background-color: rgb(244, 244, 252);
 
 
 #container-search{
-    // display: grid;
-    // grid-template-columns: 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    // justify-content: space-around;
+    margin: 3vw 3vh;
+    
+}
+#container-buttons{
+    padding: 1vh 9vw;
+}
+.input-box{
+    display: flex;
+    flex-direction: column;
+    margin: 1vh 2vw;
 
 }
+
+
+
+.search-input{
+    height: 5vh;
+    margin: 0.5vh 0;
+    font-family: 'Acme', sans-serif;
+}
+
 
 
 .btn{
     background-color: rgb(11, 1, 56);
     color: white;
-    width: 10vw;
+    // width: 10vw;
     height:100%;
     text-align: center;
+    margin: 0 0.5vw;
 
+    &:hover{
+        background-color: white;
+        color: rgb(11, 1, 56);
+    }
+
+
+    
 }
+
+#container-results{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.flight{
+    display: grid;
+    grid-template-areas: 
+    "n n"
+    "d w";
+    border: 0.5vw solid rgb(36, 2, 2);
+    margin: 2vw 3vh;
+    border-radius: 1vw;
+    background-color: aliceblue;
+    width: 30vw;
+
+    .flight-city-name{
+        grid-area: n;
+        // padding: 1vw;
+        font-family: 'Londrina Shadow', cursive;
+        font-size: 4vw;
+        font-weight: bold;
+        text-align: center;
+    }
+    .flight-details{
+        grid-area: d;
+        padding: 1vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .city-weather{
+        grid-area: w;
+        padding: 1vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .conditionPic{
+        height: 7vh;
+        width: 3vw;
+    }
+    
+}
+
+
+.no-result{
+    height: 7vh;
+    font-size: 5vw;
+    margin: 5vh auto;
+}
+
+
+
+
+
+
+
+
