--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,29 +6,27 @@ background-color: rgb(244, 244, 252);
 
 .app-name{
     font-family: 'Bungee Outline', cursive;
-    font-size: 5vw;
+    font-size: 7vw;
     font-weight: bold;
     text-align: center;
-    height: 15vh;
 }
-
 
 #container-search{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    // justify-content: space-around;
-    margin: 3vw 3vh;
+    margin: 7vh 12vw;
     
 }
 #container-buttons{
-    padding: 1vh 9vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center
 }
 .input-box{
     display: flex;
     flex-direction: column;
     margin: 1vh 2vw;
-
 }
 
 
@@ -36,7 +34,8 @@ background-color: rgb(244, 244, 252);
 .search-input{
     height: 5vh;
     margin: 0.5vh 0;
-    font-family: 'Acme', sans-serif;
+    font-family: 'Source Code Pro', monospace;
+    padding-left: 0.3vw;
 }
 
 
@@ -44,10 +43,10 @@ background-color: rgb(244, 244, 252);
 .btn{
     background-color: rgb(11, 1, 56);
     color: white;
-    // width: 10vw;
-    height:100%;
     text-align: center;
     margin: 0 0.5vw;
+    transition: 0.3s;
+    font-family: 'Source Code Pro', monospace;
 
     &:hover{
         background-color: white;
@@ -62,6 +61,8 @@ background-color: rgb(244, 244, 252);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 1vh 0vw;
+    justify-content: flex-start;
 }
 
 .flight{
@@ -74,7 +75,7 @@ background-color: rgb(244, 244, 252);
     border-radius: 1vw;
     background-color: aliceblue;
     width: 30vw;
-
+    
     .flight-city-name{
         grid-area: n;
         // padding: 1vw;
@@ -105,10 +106,44 @@ background-color: rgb(244, 244, 252);
 }
 
 
+
+
 .no-result{
-    height: 7vh;
+    border: 0.5vw solid rgb(36, 2, 2);
+    height: auto;
     font-size: 5vw;
     margin: 5vh auto;
+    padding: 5vw;
+
+}
+
+.search{
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-end;
+    border: 0.5vw solid rgb(36, 2, 2);
+    font-size: 1vw;
+    margin: 1vh 1vw;
+    padding: 1vw;
+    height: auto;
+    width: 30vw;
+
+
+    .delete-saved-search-btn{
+        font-size: 0.8vw;
+        width: 5vw;
+        background-color: rgb(119, 4, 4);
+   `    float: right;        
+
+        &:hover{
+            background-color: rgb(244, 244, 252);
+            color: rgb(119, 4, 4);
+        }
+    }
+
+    .search-para{
+        padding: 0.3vh 0.5vw;
+    }
 }
 
 
