--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,6 +22,7 @@ $grey: rgba(178, 190, 195,1.0);
 body{
     font-family: 'Source Code Pro', monospace;
     width: 100%;
+    color: $black;
 }
 
 .btn{
@@ -29,6 +30,7 @@ body{
     border-radius: 6px;
     cursor: pointer;
     outline: none;
+    border: none;
 }
 
 .hr{
