--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,14 +1,17 @@
 @import "_global";
 
 body{
-background-color: rgb(244, 244, 252);
+    background-color: $white;
 }
 
 .app-name{
-    font-family: 'Bungee Outline', cursive;
-    font-size: 7vw;
-    font-weight: bold;
+    background-image: url("../assets/road2.jpg");
+    background-size: cover;
+    font-family: 'Nunito', sans-serif;
+    font-size: 9vw;
     text-align: center;
+    padding-top: 11vh;
+    padding-bottom: 11vh;
 }
 
 #container-search{
@@ -18,43 +21,39 @@ background-color: rgb(244, 244, 252);
     margin: 7vh 12vw;
     
 }
+
 #container-buttons{
     display: flex;
     flex-direction: row;
     justify-content: center
 }
+
 .input-box{
     display: flex;
     flex-direction: column;
     margin: 1vh 2vw;
 }
 
-
-
 .search-input{
+    border: none;
     height: 5vh;
     margin: 0.5vh 0;
     font-family: 'Source Code Pro', monospace;
     padding-left: 0.3vw;
 }
 
-
-
 .btn{
-    background-color: rgb(11, 1, 56);
+    background-color: rgb(15, 9, 43);
     color: white;
     text-align: center;
     margin: 0 0.5vw;
     transition: 0.3s;
     font-family: 'Source Code Pro', monospace;
-
+    
     &:hover{
         background-color: white;
-        color: rgb(11, 1, 56);
-    }
-
-
-    
+        color: rgb(15, 9, 43);
+    }  
 }
 
 #container-results{
@@ -105,9 +104,6 @@ background-color: rgb(244, 244, 252);
     
 }
 
-
-
-
 .no-result{
     border: 0.5vw solid rgb(36, 2, 2);
     height: auto;
@@ -118,26 +114,24 @@ background-color: rgb(244, 244, 252);
 }
 
 .search{
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: flex-end;
     border: 0.5vw solid rgb(36, 2, 2);
     font-size: 1vw;
     margin: 1vh 1vw;
     padding: 1vw;
     height: auto;
     width: 30vw;
+    border-radius: 1vw;
 
 
     .delete-saved-search-btn{
         font-size: 0.8vw;
         width: 5vw;
-        background-color: rgb(119, 4, 4);
-   `    float: right;        
+        background-color: rgb(68, 15, 15);
+       float: right;        
 
         &:hover{
             background-color: rgb(244, 244, 252);
-            color: rgb(119, 4, 4);
+            color: rgb(68, 15, 15);
         }
     }
 
@@ -145,11 +139,3 @@ background-color: rgb(244, 244, 252);
         padding: 0.3vh 0.5vw;
     }
 }
-
-
-
-
-
-
-
-
