--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -152,6 +152,8 @@ body{
 }
 
 .search{
+    background-color: $primary-bright;
+    color: $primary-dark;
     border: 0.5vw solid $primary-dark;
     font-size: 1vw;
     margin: 1vh 1vw;
@@ -161,12 +163,14 @@ body{
     border-radius: 1vw;
 
 
+
     .delete-saved-search-btn{
         font-size: 0.8vw;
         width: 5vw;
         background-color: rgb(68, 15, 15);
         color: rgb(244, 244, 252);
-       float: right;        
+        float: right; 
+        margin-top: 2vh;       
 
         &:hover{
             background-color: rgb(244, 244, 252);
