--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,5 @@
 // VARIABLES
-$primary-dark: #2F3033 ;
+$primary-dark: rgb(47, 48, 51) ;
 $primary-bright: #E8CDB2 ;
 $accent: #1A4735 ;
 $red: rgba(231, 76, 60,1.0);
