--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@ body{
 .main-display{
     background-image: url("../assets/road2.jpg");
     background-size: cover;
+    height: 92vh;
 
 }
 
@@ -41,7 +42,7 @@ body{
     font-size: 9vw;
     text-align: center;
     padding-top: 5vh;
-    padding-bottom: 11vh;
+    padding-bottom: 7vh;
     padding-left: 3.8vw;
     text-shadow: 0.2vw 0.1vh $white;
 }
@@ -63,6 +64,14 @@ body{
         margin-top: 0.5vh;
         margin-bottom: 1.5vh;
     }
+}
+#container-search-items{
+    background-color: rgba(47, 48, 51, 0.692);
+    color: $white;
+    width: 80vw;
+    margin: auto;
+    margin-bottom: 20vh;
+    border-radius: 2vh;
 }
 
 #container-search{
@@ -115,9 +124,9 @@ body{
 .flight{
     display: grid;
     grid-template-areas: 
-    "n n"
-    "d w";
-    border: 0.5vw solid $accent;
+    "n n n"
+    "d d w";
+    border: 0.3vw solid $accent;
     margin: 2vw 3vh;
     border-radius: 1vw;
     background-color: $white;
@@ -125,10 +134,11 @@ body{
     
     .flight-city-name{
         grid-area: n;
-        font-family: 'Londrina Shadow', cursive;
+        font-family: 'Russo One', sans-serif;
         font-size: 4vw;
         font-weight: bold;
         text-align: center;
+        text-transform: capitalize;
     }
     .flight-details{
         grid-area: d;
@@ -157,6 +167,8 @@ body{
     font-size: 5vw;
     margin: 5vh auto;
     padding: 5vw;
+    background-color: $white;
+    border-radius: 2vw;
 
 }
 
