--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@ input[type=number]::-webkit-outer-spin-button {
         &:hover{
             background-color: $primary-dark ;
             color: $primary-bright;
+            border: 0.2vw solid $primary-bright;
         }  
     }  
 }
@@ -85,9 +86,6 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 7vh 12vw;
 }
 
-
-
-
 .input-box{
     display: flex;
     flex-direction: column;
@@ -117,20 +115,26 @@ input[type=number]::-webkit-outer-spin-button {
         }
 }
 
-
 .btn{
     background-color: $primary-bright;
     color: $primary-dark;
     border: 0.2vw solid $primary-dark;
     text-align: center;
     margin: 0 0.5vw;
-    transition: 0.3s;
+    transition: 0.5s;
     font-family: 'Montserrat', sans-serif;
+    box-shadow: 0.3vw 0.3vw black;
     
     &:hover{
-        background-color: $primary-dark;
+        background-color: $primary-dark;    
         color: $primary-bright;
+        border: 0.2vw solid $primary-bright;
     }  
+
+    &:active{
+        box-shadow: 0.1vw 0.1vw black;
+        transform: translateY(0.2vw)
+    }
 }
 
 #container-results{
@@ -238,15 +242,24 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 3vw;
 }
 
-.saved-msg{
-    border: 0.5vw solid $primary-dark;
-    height: auto;
-    font-size: 2vw;
-    margin: 5vh auto;
-    padding: 5vw;
-    background-color: $white;
-    border-radius: 2vw;
+#show-saved-searches-btn{
+    position: relative;;
+    
+    .saved-msg{
+        clip-path: polygon(50% 0%, 65% 15%, 100% 15%, 100% 100%, 0 100%, 0 15%, 35% 15%);
+        display: none;
+        position: absolute;
+        top:120%;
+        left: -6%;
+        width: 110%;
+        font-size: 1.2vw;
+        padding: 1em;
+        padding-top: 1.5em;
+        background-color: $white;
+        border-radius: 1vw;
+    }
 }
+
 
 .input-error{
     box-shadow: inset 0 0 4px red;
@@ -254,4 +267,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .dash{
     padding-top: 1.5vh;
+}
+
+.from-city-value{
+    text-transform: capitalize;
 }
