added .btn global styles

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -32,7 +32,27 @@ body{
     cursor: pointer;
     outline: none;
     border: none;
+
     font-weight: bold;
+    background-color: $primary-bright;
+    color: $primary-dark;
+    border: 0.2vw solid $primary-dark;
+    text-align: center;
+    margin: 0 0.5vw;
+    transition: 0.5s;
+    font-family: 'Montserrat', sans-serif;
+    // box-shadow: 4px 4px 6px rgba(0, 0, 0, .6);
+    
+    &:hover{
+        background-color: $primary-dark;    
+        color: $primary-bright;
+        border: 0.2vw solid $primary-bright;
+    }  
+
+    &:active{
+        box-shadow: 0.1vw 0.1vw black;
+        transform: translateY(0.2vw)
+    }
 }
 
 .hr{
