styled flight results

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -23,6 +23,7 @@ $grey: rgba(178, 190, 195,1.0);
 body{
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    height: 100vh;
     color: $black;
 }
 
