--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,9 @@
 @import "_global";
 @import "_nav-bar";
+@import "_results";
 
 body{
-    background-color: $primary-bright;;
+    background-color: $white;
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -93,102 +94,102 @@ input[type=number]::-webkit-outer-spin-button {
         }
 }
 
-#container-results{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 1vh 0vw;
-    justify-content: flex-start;
-}
+// #container-results{
+//     padding: 1rem;
+//     display: grid;
+//     grid-gap: 1rem;
+//     grid-template-columns: repeat(3, 1fr)
+// }
 
-.flight{
-    display: grid;
-    grid-template-areas: 
-    "n n n"
-    "d d w";
-    grid-template-rows: 1fr 2fr;
-    border: 0.3vw solid $accent;
-    margin: 2vw 3vh;
-    border-radius: 1vw;
-    background-color: $white;
-    width: 30vw;
+// .flight{
+//     padding: .6rem;
+//     border: 0.3vw solid $accent;
+//     border-radius: .6rem;
+//     background-color: darken($white, 5);
+//     box-shadow: 0 0 .4rem rgba(50, 50, 50, .6);
+
+//     display: grid;
+//     grid-template-areas: 
+//     "n n n"
+//     "d d w";
+//     grid-template-rows: 1fr 2fr;
     
-    .flight-city-name{
-        grid-area: n;
-        font-family: 'Russo One', sans-serif;
-        font-size: 4vw;
-        font-weight: bold;
-        text-align: center;
-        text-transform: capitalize;
-    }
-    .flight-details{
-        grid-area: d;
-        padding: 1vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-    .city-weather{
-        grid-area: w;
-        padding: 1vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-    .conditionPic{
-        height: 10vh;
-        width: 5vw;
-    }
+//     .flight-city-name{
+//         grid-area: n;
+//         font-family: 'Russo One', sans-serif;
+//         font-size: 4vw;
+//         font-weight: bold;
+//         text-align: center;
+//         text-transform: capitalize;
+//     }
+//     .flight-details{
+//         grid-area: d;
+//         padding: 1vw;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-around;
+//     }
+//     .city-weather{
+//         grid-area: w;
+//         padding: 1vw;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-around;
+//     }
+//     .conditionPic{
+//         height: 10vh;
+//         width: 5vw;
+//     }
     
-}
+// }
 
-.no-result{
-    border: 0.5vw solid $primary-dark;
-    height: auto;
-    font-size: 5vw;
-    margin: 5vh auto;
-    padding: 5vw;
-    background-color: $white;
-    border-radius: 2vw;
+// .no-result{
+//     border: 0.5vw solid $primary-dark;
+//     height: auto;
+//     font-size: 5vw;
+//     margin: 5vh auto;
+//     padding: 5vw;
+//     background-color: $white;
+//     border-radius: 2vw;
 
-}
+// }
 
-.search{
-    background-color: $white;
-    color: $primary-dark;
-    border: 0.3vw solid $primary-dark;
-    font-size: 2vw;
-    margin: 1vh 0.5vw;
-    padding: 0.5vw;
-    height: auto;
-    width: 30vw;
-    border-radius: 1vw;
+// .search{
+//     background-color: $white;
+//     color: $primary-dark;
+//     border: 0.3vw solid $primary-dark;
+//     font-size: 2vw;
+//     margin: 1vh 0.5vw;
+//     padding: 0.5vw;
+//     height: auto;
+//     width: 30vw;
+//     border-radius: 1vw;
     
-    .search-para{
-        padding: 0.3vh 0.5vw;
-    }
+//     .search-para{
+//         padding: 0.3vh 0.5vw;
+//     }
 
-    .delete-saved-search-btn{
-        font-size: 0.8vw;
-        width: 5vw;
-        background-color: rgb(68, 15, 15);
-        color: rgb(244, 244, 252);
-        float: right; 
-        margin-top: 2vh;       
+//     .delete-saved-search-btn{
+//         font-size: 0.8vw;
+//         width: 5vw;
+//         background-color: rgb(68, 15, 15);
+//         color: rgb(244, 244, 252);
+//         float: right; 
+//         margin-top: 2vh;       
 
-        &:hover{
-            background-color: rgb(244, 244, 252);
-            color: rgb(68, 15, 15);
-        }
-    }
+//         &:hover{
+//             background-color: rgb(244, 244, 252);
+//             color: rgb(68, 15, 15);
+//         }
+//     }
 
-    .search-again-btn{
-        font-size: 0.8vw;
-        float: right; 
-        margin-top: 2vh; 
-        margin-right: 0;
-    }
-}
+//     .search-again-btn{
+//         font-size: 0.8vw;
+//         float: right; 
+//         margin-top: 2vh; 
+//         margin-right: 0;
+//     }
+// }
 
 #Upper{
     text-transform: capitalize;
