seperated search area to a different file

--- a/src/scss/_results.scss
+++ b/src/scss/_results.scss
@@ -5,6 +5,10 @@
     grid-template-columns: repeat(3, 1fr)
 }
 
+.destination{
+    
+}
+
 .result{
     padding: 1.2rem .6rem .6rem;
     border-radius: .6rem;
