styled close popup btn

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -10,7 +10,7 @@ $torquise: rgba(26, 188, 156,1.0);
 $orange: rgba(230, 126, 34,1.0);
 $purple: rgba(155, 89, 182,1.0);
 $black: rgba(45, 52, 54,1.0);
-$white: rgba(236, 240, 241,1.0);
+$white: #f5f6fa;
 $grey: rgba(178, 190, 195,1.0);
 
 // GLOBAL STYLES
