--- a/src/scss/_results.scss
+++ b/src/scss/_results.scss
@@ -54,6 +54,15 @@
 
         }
 
+        .dest-price{
+            grid-column: 1/4;
+            grid-row: 1/2;
+            font-size: 1.4rem;
+            font-weight: bold;
+            color: $primary-bright;
+
+        }
+
         .dest-flight-num{
             grid-column: 5/9;
             grid-row: 1/2;
@@ -77,6 +86,11 @@
         .dest-departure-time{
             grid-column: 1/4;
             grid-row: 5/6;
+        }
+
+        .dest-flight-duration{
+            grid-column: 5/9;
+            grid-row: 4/5;
         }
 
         .dest-right-arrow{
