--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -70,6 +70,8 @@ body{
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
+    margin: auto;
+    margin-left: 150%;
   }
   
   @keyframes spin {
